# obsidian-mcp

./: .dockerignore  .env  .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml  server.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
makes/: docker.mk  py.mk
skills/expense/: SKILL.md
skills/journal/: SKILL.md
src/obsidian_mcp/: bot.py  server.py
