[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian vault"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mcp>=1.28.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0.0",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]

[tool.mypy]
files = ["src/obsidian_mcp"]
check_untyped_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "S", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E731", "S"]
